编写登录注册功能

--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -23,7 +23,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:singleLine="true"
-        android:text="设置登录密码"
+        android:text="重置登陆密码"
         android:textColor="?colorAccent"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -34,52 +34,25 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
-        android:text="设置完成之后您将可以使用新的登录密码进行登录"
+        android:text="请输入您需要重置密码的手机账号\n确认下一步后将向你的手机发送验证码\n验证成功后可设置新的登陆密码"
         android:textSize="15sp"
         android:textStyle="bold" />
 
-    <include
-        layout="@layout/layout_telephone_sms_input"
+    <me.zhixingye.salty.widget.view.PhoneEditText
+        android:id="@+id/mPetPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/mTilOldPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp"
-        android:hint="请输入旧密码">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/mEtOldPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:maxLength="20"
-            android:singleLine="true" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <include
-        layout="@layout/layout_reset_login_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp" />
 
     <me.zhixingye.salty.widget.view.ProgressButton
-        android:id="@+id/mPBtnConfirm"
+        android:id="@+id/mPBtnNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
-        app:text="确定" />
+        app:text="下一步" />
 
 </LinearLayout>
