--- a/app/src/main/res/layout/layout_password_edit_text.xml
+++ b/app/src/main/res/layout/layout_password_edit_text.xml
@@ -7,8 +7,10 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/mEtPassword"
-        android:inputType="textPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:maxLength="20"
+        android:singleLine="true" />
 
 </com.google.android.material.textfield.TextInputLayout>
