--- a/app/src/main/res/layout/layout_reset_login_password.xml
+++ b/app/src/main/res/layout/layout_reset_login_password.xml
@@ -16,7 +16,9 @@
             android:id="@+id/mEtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:maxLength="20"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,7 +73,9 @@
             android:id="@+id/mEtConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:maxLength="20"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
