--- a/app/src/main/res/layout/activity_register_successful.xml
+++ b/app/src/main/res/layout/activity_register_successful.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".module.login.view.RegisterSuccessfulActivity">
+    tools:context=".module.login.view.SuccessfulActivity">
 
     <ImageView
         android:id="@+id/mIvSuccessfulLogo"
@@ -17,11 +17,10 @@
         app:layout_constraintTop_toTopOf="@id/mGuideline" />
 
     <TextView
-        android:id="@+id/mTvSuccessful"
+        android:id="@+id/mTvSuccessfulTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="注册成功"
         android:textColor="@color/text_color_primary"
         android:textSize="23sp"
         android:textStyle="bold"
@@ -36,33 +35,30 @@
         android:layout_marginTop="28dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
-        android:text="恭喜你！您可以立即开始使用咸聊啦"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mTvSuccessful" />
+        app:layout_constraintTop_toBottomOf="@id/mTvSuccessfulTitle" />
 
     <Button
-        android:id="@+id/mBtnLogin"
+        android:id="@+id/mBtnPositive"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="20dp"
-        android:text="立即登录"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mTvSuccessfulHint" />
 
     <Button
-        android:id="@+id/mBtnGotoLoginPage"
+        android:id="@+id/mBtnNegative"
         style="@style/TextButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="返回登录页"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mBtnLogin" />
+        app:layout_constraintTop_toBottomOf="@id/mBtnPositive" />
 
 
     <androidx.constraintlayout.widget.Guideline
