编写登录注册功能

--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -23,7 +23,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:singleLine="true"
-        android:text="重置登陆密码"
+        android:text="重置登录密码"
         android:textColor="?colorAccent"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -34,7 +34,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
-        android:text="请输入您需要重置密码的手机账号\n确认下一步后将向你的手机发送验证码\n验证成功后可设置新的登陆密码"
+        android:text="请输入您需要重置密码的手机账号\n确认下一步后将向你的手机发送验证码\n验证成功后可设置新的登录密码"
         android:textSize="15sp"
         android:textStyle="bold" />
 
