--- a/app/src/main/res/layout/activity_reset_login_password.xml
+++ b/app/src/main/res/layout/activity_reset_login_password.xml
@@ -18,6 +18,7 @@
         android:theme="@style/ToolbarLightStyle" />
 
     <TextView
+        android:id="@+id/mTvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -29,6 +30,7 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/mTvHint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -43,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -51,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="20dp"
         android:hint="请输入旧密码">
 
@@ -70,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="20dp" />
 
     <me.zhixingye.salty.widget.view.ProgressButton
