--- a/app/src/main/res/layout/layout_telephone_sms_input.xml
+++ b/app/src/main/res/layout/layout_telephone_sms_input.xml
@@ -24,8 +24,8 @@
 
     <me.zhixingye.salty.widget.view.ProgressButton
         android:id="@+id/mPBtnResend"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_width="80dp"
+        android:layout_height="44dp"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="18dp" />
+        android:layout_marginBottom="19dp" />
 </FrameLayout>
