--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,8 +30,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <me.zhixingye.salty.widget.view.PhoneEditText
-        android:id="@+id/mPetPhone"
+    <me.zhixingye.salty.widget.view.TelephoneEditText
+        android:id="@+id/mTEtPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginTop="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mPetPhone" />
+        app:layout_constraintTop_toBottomOf="@id/mTEtPhone" />
 
 
     <me.zhixingye.salty.widget.view.ProgressButton
