--- a/app/src/main/res/layout/view_toast.xml
+++ b/app/src/main/res/layout/view_toast.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
@@ -29,7 +29,6 @@
             android:id="@+id/mTvContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:includeFontPadding="false"
             android:paddingStart="4dp"
             android:paddingEnd="12dp"
             android:textColor="@color/textColorPrimary"
