--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,11 +11,7 @@
     android:orientation="vertical"
     tools:context="me.zhixingye.salty.module.login.view.RegisterActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/mDefaultToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:theme="@style/ToolbarLightStyle" />
+    <include layout="@layout/layout_toolbar_transparent"/>
 
     <TextView
         android:layout_width="wrap_content"
