--- a/app/src/main/res/layout/activity_telephone_sms_verify.xml
+++ b/app/src/main/res/layout/activity_telephone_sms_verify.xml
@@ -6,12 +6,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/mDefaultToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:theme="@style/ToolbarLightStyle" />
-
+    <include layout="@layout/layout_toolbar_transparent"/>
 
     <TextView
         android:id="@+id/mTvTitle"
