--- a/app/src/main/res/layout/layout_toolbar_transparent.xml
+++ b/app/src/main/res/layout/layout_toolbar_transparent.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mDefaultToolbar"
-    style="@style/ToolbarStyle"
+    style="@style/ToolbarLightTransparentStyle"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:layout_gravity="top"
