--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="android:textViewStyle">@style/TextViewStyle</item>
         <item name="editTextStyle">@style/EditTextStyle</item>
         <item name="textInputStyle">@style/TextInputLayoutStyle</item>
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
 
         <item name="android:windowBackground">@android:color/white</item>
         <item name="android:windowDisablePreview">true</item>
@@ -27,16 +28,6 @@
 
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@null</item>
-    </style>
-
-
-    <style name="ToolbarStyle" parent="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-    </style>
-
-    <style name="ToolbarLightStyle" parent="@style/ThemeOverlay.AppCompat.ActionBar">
-        <item name="android:background">@null</item>
-        <item name="android:elevation">0dp</item>
     </style>
 
     <style name="ToolbarTitleTextAppearance.Dark" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
