编写登录注册功能

--- a/app/src/main/res/xml/file_provider_paths.xml
+++ b/app/src/main/res/xml/file_provider_paths.xml
@@ -6,6 +6,6 @@
             path="SaltyIM" />
         <files-path
             name="AppInternalStorage"
-            path="Internal" />
+            path="SaltyIM" />
     </paths>
 </resources>
