--- a/app/src/main/res/layout/view_toast.xml
+++ b/app/src/main/res/layout/view_toast.xml
@@ -6,7 +6,6 @@
     android:layout_gravity="center_horizontal"
     android:layout_marginStart="72dp"
     android:layout_marginEnd="72dp"
-    android:minHeight="38dp"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="24dp"
     app:cardElevation="4dp">
@@ -16,7 +15,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp">
 
         <ImageView
             android:id="@+id/mIvIcon"
