--- a/app/src/main/res/layout/fragment_moments.xml
+++ b/app/src/main/res/layout/fragment_moments.xml
@@ -2,7 +2,8 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgroundColorWhiteLight">
 
 
     <com.google.android.material.appbar.AppBarLayout
@@ -27,10 +28,11 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
 
-            <include layout="@layout/layout_toolbar_transparent"
+            <include
+                layout="@layout/layout_toolbar_transparent_light"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                app:layout_collapseMode="pin"/>
+                app:layout_collapseMode="pin" />
 
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
