--- a/app/src/main/res/values/style_tool_bar.xml
+++ b/app/src/main/res/values/style_tool_bar.xml
@@ -10,5 +10,9 @@
         <item name="android:elevation">0dp</item>
     </style>
 
+    <style name="ToolbarTransparentStyle" parent="@style/Widget.MaterialComponents.Toolbar.PrimarySurface">
+        <item name="android:background">@null</item>
+        <item name="android:elevation">0dp</item>
+    </style>
 
 </resources>
