--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:clickable="true">
 
     <FrameLayout
         android:id="@+id/mFlToolbarLayout"
@@ -20,161 +21,13 @@
 
     </FrameLayout>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mRvContact"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mFlToolbarLayout">
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            app:elevation="0dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_scrollFlags="scroll">
-
-                <LinearLayout
-                    android:id="@+id/mLlContactOperation"
-                    android:layout_width="match_parent"
-                    android:layout_height="62dp"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:gravity="center_vertical"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp">
-
-                    <ImageView
-                        android:layout_width="44dp"
-                        android:layout_height="44dp"
-                        android:src="@drawable/ic_contact_notification" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_weight="1"
-                        android:text="通知信息"
-                        android:textColor="@color/text_color_primary"
-                        android:textSize="14sp" />
-
-                    <me.zhixingye.salty.widget.view.BadgeView
-                        android:id="@+id/mBadgeView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="24dp"
-                        android:visibility="invisible" />
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/mLlGroup"
-                    android:layout_width="match_parent"
-                    android:layout_height="62dp"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:gravity="center_vertical"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp">
-
-                    <ImageView
-                        android:layout_width="44dp"
-                        android:layout_height="44dp"
-                        android:src="@drawable/ic_contact_group" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:text="我的群聊"
-                        android:textColor="@color/text_color_primary"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/mLlTags"
-                    android:layout_width="match_parent"
-                    android:layout_height="62dp"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:gravity="center_vertical"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp">
-
-                    <ImageView
-                        android:layout_width="44dp"
-                        android:layout_height="44dp"
-                        android:src="@drawable/ic_contact_label" />
-
-                    <TextView
-                        android:id="@+id/mTvTags"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:text="我的标签"
-                        android:textColor="@color/text_color_primary"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="32dp"
-                    android:background="@color/backgroundColorWhiteLight"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <View
-                        android:layout_width="80dp"
-                        android:layout_height="1px"
-                        android:background="@color/text_color_hint" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginEnd="12dp"
-                        android:gravity="center"
-                        android:text="好友列表"
-                        android:textColor="@color/text_color_hint"
-                        android:textSize="12sp" />
-
-                    <View
-                        android:layout_width="80dp"
-                        android:layout_height="1px"
-                        android:background="@color/text_color_hint" />
-
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/mRvContact"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-    <me.zhixingye.salty.widget.view.IndexBarView
-        android:id="@+id/mIndexBarView"
-        android:layout_width="16dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/bg_index_bar"
-        android:paddingTop="4dp"
-        android:paddingBottom="2dp"
-        app:layout_constraintBottom_toTopOf="@id/mFBtnAdd"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mFlToolbarLayout" />
 
     <TextView
@@ -202,5 +55,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:tint="@android:color/white" />
+
+    <me.zhixingye.salty.widget.view.IndexBarView
+        android:id="@+id/mIndexBarView"
+        android:layout_width="16dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/bg_index_bar"
+        android:paddingTop="4dp"
+        android:paddingBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@id/mFBtnAdd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mFlToolbarLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
