--- a/base/src/main/res/drawable/ic_toast_hint.xml
+++ b/base/src/main/res/drawable/ic_toast_hint.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
     <path
-        android:fillColor="@color/colorAccent"
+        android:fillColor="?colorAccent"
         android:pathData="M512,512m-512,0a512,512 0,1 0,1024 0,512 512,0 1,0 -1024,0Z" />
     <path
         android:fillColor="#FFFFFF"
