--- a/base/src/main/res/layout/view_toast.xml
+++ b/base/src/main/res/layout/view_toast.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="4dp"
             android:paddingEnd="12dp"
-            android:textColor="@color/textColorPrimary"
+            android:textColor="?android:textColorPrimary"
             android:textSize="14sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
